fix right-aligned text in html CV header

--- a/css/cv.css
+++ b/css/cv.css
@@ -24,9 +24,10 @@ header {
 text-decoration: underline;
 }
 
-#header-left p{
+#header-right p{
   position: relative; 
-  float: right; 
+  float: right;
+  clear: right;
 }
 
 header h1 {
